kubernetes/tranquill-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tranquill-api
  labels:
    app: tranquill-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tranquill-api
  template:
    metadata:
      labels:
        app: tranquill-api
    spec:
      containers:
      - name: tranquill-api
        image: us.gcr.io/tranquill/tranquill_api@sha256:c11dfc9d257480fd245e74cb3a30d57a4bde8e8203b161293c674ca481bc3194
        readinessProbe:
          httpGet:
            path: /healthy
            port: 8080
        command: ["npm", "run", "start:production"]
