kubernetes/tranquill-client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tranquill-client
  labels:
    app: tranquill-client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tranquill-client
  template:
    metadata:
      labels:
        app: tranquill-client
    spec:
      containers:
      - name: tranquill-client
        image: us.gcr.io/tranquill/tranquill_client@sha256:cc23ef737315a89a3648448e459ea1296abcf50e708c3b26a2d772d60e0693b9
        command: ["npm", "run", "start:production"]
