kubernetes/tranquill-api-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tranquill-api
  name: tranquill-api
spec:
  type: NodePort
  selector:
    app: tranquill-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
