kubernetes/tranquill-client-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tranquill-client
  name: tranquill-client
spec:
  type: NodePort
  selector:
    app: tranquill-client
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
