kubernetes/tranquill-mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tranquill-mongo
  labels:
    app: tranquill-mongo
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: tranquill-mongo
  ports:
  - port: 27017
    name: tranquill-mongo
    targetPort: 27017
