kubernetes/tranquill-redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tranquill-redis
  labels:
    app: tranquill-redis
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: tranquill-redis
  ports:
  - port: 6379
    name: tranquill-redis
    targetPort: 6379
